fixed video alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -380,7 +380,7 @@ ul li.on {
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 0 0 2px 3px;
+    padding: 0 0 2px 0;
 }
 
 #footer video {
